--- a/.packignore
+++ b/.packignore
@@ -1,1 +1,6 @@
+minecraft/.replay_cache
+minecraft/journeymap
+minecraft/mods_disabled
+minecraft/notes
+minecraft/replay_recordings
 minecraft/saves
