--- a/minecraft/config/fabrication/features.ini
+++ b/minecraft/config/fabrication/features.ini
@@ -19,58 +19,58 @@
 	; Enable all features in Balance
 	; Changes to vanilla balance.
 	; 
-	category.balance=false
+	category.balance=dark
 
 	; Enable all features in Experiments
 	; Bad ideas given form.
 	; 
-	category.experiments=false
+	category.experiments=dark
 
 	; Enable all features in Fixes
 	; Fixes for bugs and weird behavior.
 	; 
-	category.fixes=true
+	category.fixes=dark
 
 	; Enable all features in Mechanics
 	; New mechanics and powerful 
 	; additions. 
-	category.mechanics=false
+	category.mechanics=dark
 
 	; Enable all features in Minor Mechanics
 	; Small additions to vanilla 
 	; mechanics. 
-	category.minor_mechanics=false
+	category.minor_mechanics=dark
 
 	; Enable all features in Pedantry
 	; Fixes for non-problems.
 	; 
-	category.pedantry=false
+	category.pedantry=dark
 
 	; Enable all features in Tweaks
 	; Minor changes that fit with vanilla.
 	; 
-	category.tweaks=true
+	category.tweaks=dark
 
 	; Enable all features in Unsafe
 	; QoL changes that make cheating easier.
 	; 
-	category.unsafe=false
+	category.unsafe=dark
 
 	; Enable all features in Utility
 	; Useful tidbits that don't modify 
 	; gameplay. 
-	category.utility=true
+	category.utility=dark
 
 	; Enable all features in Weird Tweaks
 	; Opinionated changes.
 	; 
-	category.weird_tweaks=false
+	category.weird_tweaks=dark
 
 	; Enable all features in What's Old Is New Again
 	; Forward ports of 
 	; forgotten tidbits. 
 	; 
-	category.woina=false
+	category.woina=dark
 
 	; Client Only
 	; 
@@ -349,7 +349,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/all_damage_is_fatal.mp4
-	extra.all_damage_is_fatal=unset
+	extra.all_damage_is_fatal=false
 
 	; Client Only
 	; 
@@ -358,7 +358,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/chat_markdown.mp4
-	extra.chat_markdown=unset
+	extra.chat_markdown=true
 
 	; Server or Client
 	; 
@@ -370,7 +370,7 @@
 	; Does not delete 
 	; existing bee nests or bee entities; only fully effective in a new 
 	; world. 
-	extra.disable_bees=unset
+	extra.disable_bees=false
 
 	; Server or Client
 	; 
@@ -380,7 +380,7 @@
 	; among other issues.
 	; Will not fully take effect unless the game is 
 	; restarted. 
-	extra.disable_villagers=unset
+	extra.disable_villagers=false
 
 	; Client Only
 	; 
@@ -559,7 +559,7 @@
 	; 
 	; Makes filled maps show their ID.
 	; 
-	show_map_id=true
+	show_map_id=false
 
 	; Server Only
 	; 
@@ -903,7 +903,7 @@
 	; green. 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/rainbow_experience.mp4
-	rainbow_experience=unset
+	rainbow_experience=false
 
 	; Client Only
 	; 
@@ -1705,7 +1705,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/faster_obsidian.mp4
-	faster_obsidian=unset
+	faster_obsidian=true
 
 	; Server Only
 	; 
@@ -1818,7 +1818,7 @@
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/gold_tools_useful_in_nether.mp4
 	; See the default config for more info: https://github.com/FalsehoodMC/Fabrication/blob/3.0/1.18/src/main/resources/default_dimensional_tools_config.ini
-	dimensional_tools=unset
+	dimensional_tools=false
 
 	; Server or Client
 	; 
@@ -2337,7 +2337,7 @@
 	; applies to ladders). This on it's own disables ladders, the feature 
 	; is intended to be used by other features. 
 	; 
-	entities_cant_climb=unset
+	entities_cant_climb=false
 
 ; Bad ideas given form.
 ; 
@@ -2349,7 +2349,7 @@
 	; window positions, they will be honored instead of the window always 
 	; being centered. 
 	; 
-	no_set_window_pos=unset
+	no_set_window_pos=false
 
 
 ; Notices: (Do not edit anything past this line; it will be overwritten)
