--- a/minecraft/config/sound_physics_remastered/allowed_sounds.properties
+++ b/minecraft/config/sound_physics_remastered/allowed_sounds.properties
@@ -121,6 +121,16 @@ charm\:totem_release_items=true
 charm\:totem_store_items=true
 charm\:waypoint_broadcast=true
 charm\:woodcutter_use=true
+chimes\:block.amethyst.shimmer=true
+chimes\:block.amethyst.shimmering=true
+chimes\:block.bamboo.chime=true
+chimes\:block.bamboo.chiming=true
+chimes\:block.copper.chime=true
+chimes\:block.copper.chiming=true
+chimes\:block.glass.chime=true
+chimes\:block.iron.chime=true
+chimes\:block.iron.chiming=true
+chimes\:block.outdoor.wind=true
 clutter\:coin_pile_break=true
 clutter\:coin_pile_fall=true
 clutter\:coin_pile_hit=true
@@ -192,11 +202,84 @@ ecologics\:entity.squirrel.hurt=true
 ecologics\:music_disc.coconut=true
 elevatorid\:camouflage=true
 elevatorid\:teleport=true
+friendsandfoes\:entity.copper_golem.death=true
+friendsandfoes\:entity.copper_golem.hurt=true
+friendsandfoes\:entity.copper_golem.oxidation=true
+friendsandfoes\:entity.copper_golem.repair=true
+friendsandfoes\:entity.copper_golem.spawn=true
+friendsandfoes\:entity.copper_golem.spin=true
+friendsandfoes\:entity.copper_golem.step=true
+friendsandfoes\:entity.copper_golem_oxidized.death=true
+friendsandfoes\:entity.copper_golem_oxidized.hurt=true
+friendsandfoes\:entity.copper_golem_oxidized.spin=true
+friendsandfoes\:entity.copper_golem_oxidized.step=true
+friendsandfoes\:entity.copper_golem_weathered.death=true
+friendsandfoes\:entity.copper_golem_weathered.hurt=true
+friendsandfoes\:entity.copper_golem_weathered.spin=true
+friendsandfoes\:entity.copper_golem_weathered.step=true
+friendsandfoes\:entity.crab.death=true
+friendsandfoes\:entity.crab.hurt=true
+friendsandfoes\:entity.crab.lay_egg=true
+friendsandfoes\:entity.crab.step=true
+friendsandfoes\:entity.glare.ambient=true
+friendsandfoes\:entity.glare.death=true
+friendsandfoes\:entity.glare.eat=true
+friendsandfoes\:entity.glare.grumpiness=true
+friendsandfoes\:entity.glare.grumpiness_short=true
+friendsandfoes\:entity.glare.hurt=true
+friendsandfoes\:entity.glare.rustle=true
+friendsandfoes\:entity.glare.shake=true
+friendsandfoes\:entity.ice_chunk.ambient=true
+friendsandfoes\:entity.ice_chunk.hit=true
+friendsandfoes\:entity.ice_chunk.summon=true
+friendsandfoes\:entity.iceologer.ambient=true
+friendsandfoes\:entity.iceologer.cast_spell=true
+friendsandfoes\:entity.iceologer.death=true
+friendsandfoes\:entity.iceologer.hurt=true
+friendsandfoes\:entity.iceologer.prepare_slowness=true
+friendsandfoes\:entity.iceologer.prepare_summon=true
+friendsandfoes\:entity.mauler.bite=true
+friendsandfoes\:entity.mauler.death=true
+friendsandfoes\:entity.mauler.growl=true
+friendsandfoes\:entity.mauler.hurt=true
+friendsandfoes\:entity.moobloom.convert=true
+friendsandfoes\:entity.moobloom.shear=true
+friendsandfoes\:entity.player.mirror_move=true
+friendsandfoes\:entity.rascal.ambient=true
+friendsandfoes\:entity.rascal.disappear=true
+friendsandfoes\:entity.rascal.hurt=true
+friendsandfoes\:entity.rascal.nod=true
+friendsandfoes\:entity.rascal.reappear=true
+friendsandfoes\:entity.rascal.reward=true
+friendsandfoes\:entity.rascal.reward_bad=true
+friendsandfoes\:entity.shield_debris.impact=true
+friendsandfoes\:entity.tuff_golem.drop_item=true
+friendsandfoes\:entity.tuff_golem.glue_off=true
+friendsandfoes\:entity.tuff_golem.glue_on=true
+friendsandfoes\:entity.tuff_golem.hold_item=true
+friendsandfoes\:entity.tuff_golem.hurt=true
+friendsandfoes\:entity.tuff_golem.move=true
+friendsandfoes\:entity.tuff_golem.repair=true
+friendsandfoes\:entity.tuff_golem.sleep=true
+friendsandfoes\:entity.tuff_golem.step=true
+friendsandfoes\:entity.tuff_golem.wake=true
+friendsandfoes\:entity.wildfire.ambient=true
+friendsandfoes\:entity.wildfire.death=true
+friendsandfoes\:entity.wildfire.hurt=true
+friendsandfoes\:entity.wildfire.shield_break=true
+friendsandfoes\:entity.wildfire.shockwave=true
+friendsandfoes\:entity.wildfire.shoot=true
+friendsandfoes\:entity.wildfire.step=true
+friendsandfoes\:entity.wildfire.summon_blaze=true
+friendsandfoes\:item.armor.equip_wildfire_crown=true
+friendsandfoes\:music_disc.around_the_corner=true
 horseman\:item.lead.break=true
 horseman\:item.lead.untied=true
 leahs-immersive-thunder\:thunder_close=true
 leahs-immersive-thunder\:thunder_far=true
 leahs-immersive-thunder\:thunder_medium=true
+lovely_snails\:entity.lovely_snails.snail.death=true
+lovely_snails\:entity.lovely_snails.snail.hurt=true
 minecraft\:ambient.basalt_deltas.additions=true
 minecraft\:ambient.basalt_deltas.loop=true
 minecraft\:ambient.basalt_deltas.mood=true
@@ -1819,6 +1902,16 @@ natures_spirit\:music.overworld.wisteria=true
 niftycarts\:entity.cart.attach=true
 niftycarts\:entity.cart.detach=true
 niftycarts\:entity.cart.place=true
+ribbits\:entity.ribbit.ambient=true
+ribbits\:entity.ribbit.death=true
+ribbits\:entity.ribbit.hurt=true
+ribbits\:entity.ribbit.magic=true
+ribbits\:entity.ribbit.step=true
+ribbits\:music.ribbit.bass=true
+ribbits\:music.ribbit.bongo=true
+ribbits\:music.ribbit.flute=true
+ribbits\:music.ribbit.guitar=true
+ribbits\:music.ribbit.maraca=true
 subtle_effects\:block.amethyst_cluster.chime=true
 subtle_effects\:block.campfire.sizzle=true
 subtle_effects\:block.cauldron.clean_item=true
