--- a/minecraft/config/inventoryessentials-common.toml
+++ b/minecraft/config/inventoryessentials-common.toml
@@ -1,6 +1,6 @@
 
 # Should space-clicking move all items even if an empty slot was clicked?
-allowBulkTransferAllOnEmptySlot = false
+allowBulkTransferAllOnEmptySlot = true
 
 # Should space-clicking armor in the inventory swap to all matching armor?
 bulkTransferArmorSets = true
