--- a/minecraft/config/moreculling.toml
+++ b/minecraft/config/moreculling.toml
@@ -2,7 +2,7 @@ version = 1
 enableSodiumMenu = true
 cloudCulling = true
 signTextCulling = true
-rainCulling = false
+rainCulling = true
 dontCull = []
 useBlockStateCulling = true
 useCustomItemFrameRenderer = true
