--- a/minecraft/config/sound_physics_remastered/occlusion.properties
+++ b/minecraft/config/sound_physics_remastered/occlusion.properties
@@ -211,9 +211,9 @@ WET_GRASS=0.1
 WOOD=1.0
 # Wool (Sound Type)
 WOOL=1.5
-# block.minecraft.jukebox (Block)
+# Jukebox (Block)
 minecraft\:jukebox=0.0
-# block.minecraft.lava (Block)
+# Lava (Block)
 minecraft\:lava=0.75
-# block.minecraft.water (Block)
+# Water (Block)
 minecraft\:water=0.25
