--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ minecraft/config/chunky/tasks/minecraft/overworld.properties
 minecraft/servers.dat
 minecraft/servers.dat_old
 minecraft/cherishedworlds-favorites.dat
+minecraft/notes/
