--- a/minecraft/config/chunksfadein.properties
+++ b/minecraft/config/chunksfadein.properties
@@ -13,6 +13,6 @@ show-mod-tab-in-settings = true
 fade-enabled = true
 animation-enabled = false
 config-version = 3
-world-curvature-enabled = true
+world-curvature-enabled = false
 animation-type = 0
 animation-angle = 0.0
