--- a/minecraft/config/fabrication/features.ini
+++ b/minecraft/config/fabrication/features.ini
@@ -2051,7 +2051,7 @@
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/blinking_drops.mp4
 	; Survival Test video, for reference: https://unascribed.com/fabrication/survival_test.mp4
-	blinking_drops=unset
+	blinking_drops=false
 
 	; Client Only
 	; 
@@ -2091,7 +2091,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/dropped_items_dont_stack.mp4
-	dropped_items_dont_stack=unset
+	dropped_items_dont_stack=false
 
 	; Client Only
 	; 
@@ -2283,7 +2283,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/old_lava.mp4
-	old_lava=unset
+	old_lava=false
 
 	; Client Only
 	; 
