--- a/minecraft/config/moreculling.toml
+++ b/minecraft/config/moreculling.toml
@@ -14,7 +14,7 @@ itemFrame3FaceCullingRange = 4.0
 paintingCulling = true
 leavesCullingMode = "DEFAULT"
 leavesCullingAmount = 2
-includeMangroveRoots = false
+includeMangroveRoots = true
 endGatewayCulling = false
 beaconBeamCulling = true
 useOnModdedBlocksByDefault = true
@@ -25,28 +25,36 @@ fastitemframes = true
 nightlights = true
 supplementaries = true
 enchanted-vertical-slabs = true
+brickfurnace = true
+natures_spirit = true
 clutter = true
+items_displayed = true
 adorablehamsterpets = true
 easymagic = true
+ribbits = true
 yungscavebiomes = true
 enc_vanilla = true
-items_displayed = true
-natures_spirit = true
+chimes = true
+ironchest = true
+friendsandfoes = true
 easyanvils = true
 glassential = true
 visualworkbench = true
 ecologics = true
+copperhopper = true
 minecraft = true
 visualoverhaul = true
 diagonalwalls = true
 lootr = true
 comforts = true
-yigd = true
 elevatorid = true
+yigd = true
+more_useful_copper = true
 playerplates = true
+usefulslime = true
 amendments = true
 creeperoverhaul = true
-usefulslime = true
+monolib = true
 diagonalwindows = true
 rocks = true
 lolmct = true
