--- a/minecraft/config/charm-common.toml
+++ b/minecraft/config/charm-common.toml
@@ -131,7 +131,7 @@
 
 [CropReplanting]
 	#Right-click with a hoe to quickly harvest and replant a fully-grown crop.
-	Enabled = true
+	Enabled = false
 
 [DeepslateDungeons]
 	#Dungeons in the deepslate layer will be constructed of deepslate bricks and cobbled deepslate.
