--- a/minecraft/config/completionistsindex-client.toml
+++ b/minecraft/config/completionistsindex-client.toml
@@ -5,4 +5,4 @@ blacklist = ["minecraft:*_spawn_egg", "minecraft:bedrock", "minecraft:budding_am
 #Choose which screens to add the Completionist's Index button to.
 #Default Value: PAUSE_MENU
 #Allowed Values: PAUSE_MENU, INVENTORY_MENU, BOTH
-index_button_screen = "INVENTORY_MENU"
+index_button_screen = "PAUSE_MENU"
