--- a/minecraft/config/global_packs.toml
+++ b/minecraft/config/global_packs.toml
@@ -8,7 +8,7 @@ config_version = 4
 # <user_home>/.minecraft_global_packs/<version>/optional_resourcepacks
 enable_system_global_packs = false
 # This prints Pack IDs into the logs, using this you can force enable builtin resourcepacks from mods, further down in the config.
-log_pack_ids = false
+log_pack_ids = true
 
 # This config allows you to add or remove folders or single files as Data-/Resourcepacks
 # For that simply specify the file path to the folder/file relative to your <instance> folder
