--- a/minecraft/config/netherportalspread.json5
+++ b/minecraft/config/netherportalspread.json5
@@ -15,10 +15,10 @@
 	"prefixPortalCoordsInMessage": true,
 	// The radius around the portal to which the nether blocks can spread.
 	// min: 1, max: 100
-	"portalSpreadRadius": 16,
+	"portalSpreadRadius": 8,
 	// The delay in ticks in between the spread around the nether portal. 20 ticks = 1 second.
 	// min: 1, max: 72000
-	"spreadDelayTicks": 40,
+	"spreadDelayTicks": 80,
 	// The amount of blocks that are instantly converted to a nether block around a portal when it is detected. If there are existing nether blocks within the radius, their count is substracted from this number.
 	// min: 0, max: 1000
 	"instantConvertAmount": 32,
@@ -28,5 +28,5 @@
 	// min: 1, max: 100
 	"preventSpreadBlockAmountNeeded": 4,
 	// The block which prevents the nether portal from spreading. By default a coal block (minecraft:coal_block is the namespace ID).
-	"preventSpreadBlockString": "minecraft:coal_block"
+	"preventSpreadBlockString": "minecraft:crying_obsidian"
 }
