--- a/minecraft/config/subtle_effects/entities.toml
+++ b/minecraft/config/subtle_effects/entities.toml
@@ -31,11 +31,11 @@ animalFeedingParticles = true
 animalFeedingSoundVolume = 1.0
 
 [sleeping]
-playerSnoreChance = 0
-playerSnoreSoundVolume = 0
+playerSnoreChance = 0.0
+playerSnoreSoundVolume = 0.0
 playersHaveSleepingZs = true
-villagerSnoreChance = 0
-villagerSnoreSoundVolume = 0
+villagerSnoreChance = 0.0
+villagerSnoreSoundVolume = 0.0
 villagersHaveSleepingZs = true
 foxesHaveSleepingZs = true
 batsHaveSleepingZs = true
@@ -70,11 +70,11 @@ heartbeatVolume = 1.0
 heartBeatingWaitTime = 3
 
 [dustClouds]
-scale = 2.0
+scale = 1.0
 alpha = 1.0
 preventWhenRaining = false
 flyIntoWall = true
-lessViewBlocking = false
+lessViewBlocking = true
 playerFell = true
 mobFell = true
 landMaceAttack = true
