--- a/minecraft/config/sound_physics_remastered/allowed_sounds.properties
+++ b/minecraft/config/sound_physics_remastered/allowed_sounds.properties
@@ -88,6 +88,41 @@ adorablehamsterpets\:hamster_wow=true
 airhop\:entity.player.hop=true
 amendments\:explosion.fireball=true
 automodpack\:waiting_music=true
+backpacked\:item.backpack.place=true
+betterend\:betterend.ambient.amber_land=true
+betterend\:betterend.ambient.blossoming_spires=true
+betterend\:betterend.ambient.caves=true
+betterend\:betterend.ambient.chorus_forest=true
+betterend\:betterend.ambient.dust_wastelands=true
+betterend\:betterend.ambient.foggy_mushroomland=true
+betterend\:betterend.ambient.glowing_grasslands=true
+betterend\:betterend.ambient.megalake=true
+betterend\:betterend.ambient.megalake_grove=true
+betterend\:betterend.ambient.sulphur_springs=true
+betterend\:betterend.ambient.umbra_valley=true
+betterend\:betterend.ambient.umbrella_jungle=true
+betterend\:betterend.entity.dragonfly=true
+betterend\:betterend.entity.shadow_walker=true
+betterend\:betterend.entity.shadow_walker_damage=true
+betterend\:betterend.entity.shadow_walker_death=true
+betterend\:betterend.music.caves=true
+betterend\:betterend.music.dark=true
+betterend\:betterend.music.forest=true
+betterend\:betterend.music.openspace=true
+betterend\:betterend.music.water=true
+betterend\:betterend.record.endseeker=true
+betterend\:betterend.record.eo_dracona=true
+betterend\:betterend.record.grasping_at_stars=true
+betterend\:betterend.record.strange_and_alien=true
+betternether\:betternether.ambient.gravel_desert=true
+betternether\:betternether.ambient.mushroom_forest=true
+betternether\:betternether.ambient.nether_jungle=true
+betternether\:betternether.ambient.swampland=true
+betternether\:betternether.mob.firefly.fly=true
+betternether\:betternether.mob.jellyfish=true
+betternether\:betternether.mob.naga_attack=true
+betternether\:betternether.mob.naga_idle=true
+betternether\:betternether.mob.skull_flight=true
 cardiac\:life_orb_pickup=true
 charm\:amethyst=true
 charm\:atlas_close=true
@@ -188,6 +223,54 @@ crittersandcompanions\:entity.red_panda.hurt=true
 crittersandcompanions\:entity.sea_bunny.death=true
 crittersandcompanions\:entity.sea_bunny.hurt=true
 crittersandcompanions\:entity.shima_enaga.ambient=true
+deeperdarker\:ambience.portal.groan=true
+deeperdarker\:ambient.otherside.additions=true
+deeperdarker\:block.note_block.imitate.shattered=true
+deeperdarker\:block.sculk_stone.break=true
+deeperdarker\:block.sculk_stone.fall=true
+deeperdarker\:block.sculk_stone.hit=true
+deeperdarker\:block.sculk_stone.place=true
+deeperdarker\:block.sculk_stone.step=true
+deeperdarker\:block.vase.break=true
+deeperdarker\:block.vase.fall=true
+deeperdarker\:block.vase.hit=true
+deeperdarker\:block.vase.place=true
+deeperdarker\:block.vase.step=true
+deeperdarker\:entity.angler_fish.death=true
+deeperdarker\:entity.angler_fish.flop=true
+deeperdarker\:entity.angler_fish.hurt=true
+deeperdarker\:entity.leech.hurt=true
+deeperdarker\:entity.shattered.ambient=true
+deeperdarker\:entity.shattered.death=true
+deeperdarker\:entity.shattered.hurt=true
+deeperdarker\:entity.shattered.notice=true
+deeperdarker\:entity.shriek_worm.ambient=true
+deeperdarker\:entity.shriek_worm.death=true
+deeperdarker\:entity.shriek_worm.hurt=true
+deeperdarker\:entity.sludge.death=true
+deeperdarker\:entity.sludge.death_small=true
+deeperdarker\:entity.sludge.hurt=true
+deeperdarker\:entity.sludge.hurt_small=true
+deeperdarker\:entity.sludge.jump=true
+deeperdarker\:entity.sludge.jump_small=true
+deeperdarker\:entity.sludge.squish=true
+deeperdarker\:entity.sludge.squish_small=true
+deeperdarker\:entity.snapper.ambient=true
+deeperdarker\:entity.snapper.bite=true
+deeperdarker\:entity.snapper.hurt=true
+deeperdarker\:entity.snapper.sniff=true
+deeperdarker\:entity.stalker.ambient=true
+deeperdarker\:entity.stalker.death=true
+deeperdarker\:entity.stalker.hurt=true
+deeperdarker\:entity.stalker.notice=true
+deeperdarker\:item.sonorous_staff.sonic_boom=true
+deeperdarker\:item.transmitter.error=true
+deeperdarker\:item.transmitter.link=true
+deeperdarker\:item.transmitter.open=true
+deeperdarker\:item.transmitter.unlink=true
+deeperdarker\:music.otherside.deeplands=true
+deeperdarker\:music.otherside.echoing_forest=true
+deeperdarker\:music.otherside.overcast_columns=true
 ecologics\:block.coconut.smash=true
 ecologics\:block.thin_ice.crack=true
 ecologics\:entity.coconut_crab.ambient=true
