--- a/minecraft/config/modernfix-mixins.properties
+++ b/minecraft/config/modernfix-mixins.properties
@@ -51,7 +51,7 @@
 #  mixin.perf.deduplicate_climate_parameters=false # (default)
 #  mixin.perf.deduplicate_location=false # (default)
 #  mixin.perf.deduplicate_wall_shapes=true # (default)
-#  mixin.perf.dynamic_dfu=true # (default)
+#  mixin.perf.dynamic_dfu=false # (overridden for mod compat)
 #  mixin.perf.dynamic_entity_renderers=false # (default)
 #  mixin.perf.dynamic_resources=false # (default)
 #  mixin.perf.dynamic_sounds=true # (default)
@@ -69,7 +69,7 @@
 #  mixin.perf.remove_biome_temperature_cache=true # (default)
 #  mixin.perf.resourcepacks=true # (default)
 #  mixin.perf.state_definition_construct=true # (default)
-#  mixin.perf.thread_priorities=true # (default)
+#  mixin.perf.thread_priorities=false # (overridden for mod compat)
 #  mixin.perf.ticking_chunk_alloc=true # (default)
 #  mixin.perf.worldgen_allocation=false # (default)
 #  mixin.safety=true # (default)
