add expanded storage and optigui. remove mods that add duplicate functionality.
Signed-off-by: Zach Van Camp <marshmilo100@gmail.com>

--- a/minecraft/config/sound_physics_remastered/allowed_sounds.properties
+++ b/minecraft/config/sound_physics_remastered/allowed_sounds.properties
@@ -87,6 +87,11 @@ adorablehamsterpets\:hamster_wake_up3=true
 adorablehamsterpets\:hamster_wow=true
 airhop\:entity.player.hop=true
 amendments\:explosion.fireball=true
+another_furniture\:block.chair.tuck=true
+another_furniture\:block.chair.untuck=true
+another_furniture\:block.curtain.use=true
+another_furniture\:block.service_bell.use=true
+another_furniture\:item.furniture_hammer.use=true
 automodpack\:waiting_music=true
 backpacked\:item.backpack.place=true
 betterend\:betterend.ambient.amber_land=true
@@ -356,6 +361,8 @@ friendsandfoes\:entity.wildfire.step=true
 friendsandfoes\:entity.wildfire.summon_blaze=true
 friendsandfoes\:item.armor.equip_wildfire_crown=true
 friendsandfoes\:music_disc.around_the_corner=true
+handcrafted\:hammer_stone=true
+handcrafted\:hammer_wood=true
 horseman\:item.lead.break=true
 horseman\:item.lead.untied=true
 leahs-immersive-thunder\:thunder_close=true
