--- a/minecraft/config/structurecredits-config.json
+++ b/minecraft/config/structurecredits-config.json
@@ -38,6 +38,15 @@
     "formationsnether:checkerboard_temple",
     "repurposed_structures:village_cherry",
     "formationsnether:small_lava_arena",
-    "betternether:nether_city"
+    "betternether:nether_city",
+    "natures_spirit:village_adobe",
+    "formationsoverworld:raft",
+    "structory:boat",
+    "repurposed_structures:outpost_desert",
+    "formationsoverworld:campsite",
+    "repurposed_structures:village_mushroom",
+    "repurposed_structures:village_jungle",
+    "repurposed_structures:pyramid_jungle",
+    "explorations:jungle_temple"
   ]
 }
