remove chunk loading nonsense and add natures spirit
Signed-off-by: Zach Van Camp <marshmilo100@gmail.com>

--- a/minecraft/config/c2me.toml
+++ b/minecraft/config/c2me.toml
@@ -133,7 +133,7 @@ globalExecutorParallelism = "default"
 	useDensityFunctionCompiler = "default"
 	# (Default: true) Whether to enable aquifer optimizations to accelerate overworld worldgen
 	# (may cause incompatibility with other mods)
-	optimizeAquifer = "default"
+	optimizeAquifer = false
 	# (Default: true) Whether to enable End Biome Cache to accelerate The End worldgen 
 	# This is no longer included in lithium-fabric 
 	# (may cause incompatibility with other mods)
