update configs for server
Signed-off-by: Zach Van Camp <marshmilo100@gmail.com>

--- a/minecraft/config/fabrication/features.ini
+++ b/minecraft/config/fabrication/features.ini
@@ -1461,7 +1461,7 @@
 	; 
 	; 
 	; Demonstration video: https://unascribed.com/fabrication/environmentally_friendly_creepers.mp4
-	environmentally_friendly_creepers=unset
+	environmentally_friendly_creepers=false
 
 	; Server Only
 	; 
@@ -1551,7 +1551,7 @@
 	; Server Only
 	; 
 	; Ender dragon always gives the same xp amount as it would 
-	; the first time. 
+	; the first AAAA. 
 	; 
 	extra.ender_dragon_full_xp=true
 
