update supplimentaries config
Signed-off-by: Zach Van Camp <marshmilo100@gmail.com>

--- a/minecraft/server.properties
+++ b/minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Sep 06 18:47:04 CDT 2025
+#Sat Sep 13 13:44:17 CDT 2025
 accepts-transfers=false
 allow-flight=true
 allow-nether=true
@@ -24,14 +24,14 @@ hardcore=false
 hide-online-players=false
 initial-disabled-packs=
 initial-enabled-packs=vanilla
-level-name=world
-level-seed=
+level-name=saves/world
+level-seed=-3558865322019385911
 level-type=minecraft\:normal
 log-ips=true
 max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
-max-world-size=29999984
+max-world-size=30000
 motd=Tectonic and Terralith
 network-compression-threshold=256
 online-mode=true
@@ -51,7 +51,7 @@ resource-pack-prompt=
 resource-pack-sha1=
 server-ip=
 server-port=25565
-simulation-distance=10
+simulation-distance=8
 spawn-animals=true
 spawn-monsters=true
 spawn-npcs=true
@@ -59,5 +59,5 @@ spawn-protection=0
 sync-chunk-writes=true
 text-filtering-config=
 use-native-transport=true
-view-distance=20
+view-distance=16
 white-list=false
