--- a/instance.cfg
+++ b/instance.cfg
@@ -1,16 +1,16 @@
 [General]
 ConfigVersion=1.2
-iconKey=default
-name=Vanilla++ 1.21.1
+iconKey=dirt
+name=Vanilla++ Server
 AutomaticJava=true
 InstanceType=OneSix
 JoinServerOnLaunch=false
-OverrideCommands=false
+OverrideCommands=true
 OverrideConsole=false
 OverrideEnv=false
 notes=
 OverrideGameTime=false
-OverrideJavaArgs=false
+OverrideJavaArgs=true
 OverrideJavaLocation=true
 ExportAuthor=
 OverrideLegacySettings=false
@@ -42,39 +42,16 @@ MaxMemAlloc=32000
 MinMemAlloc=512
 Profiler=
 PermGen=128
-lastLaunchTime=1757736429291
-lastTimePlayed=426
+lastLaunchTime=1757872090437
+lastTimePlayed=108
 linkedInstances=[]
-totalTimePlayed=186629
-AutoCloseConsole=false
-CloseAfterLaunch=false
-CustomGLFWPath=
-CustomOpenALPath=
-EnableFeralGamemode=false
-EnableMangoHud=false
-Env=@Variant(\0\0\0\b\0\0\0\0)
-InstanceAccountId=
-JoinServerOnLaunchAddress=
-JoinWorldOnLaunch=
-JvmArgs=
-LaunchMaximized=false
-MinecraftWinHeight=720
-MinecraftWinWidth=1280
-OnlineFixes=false
+totalTimePlayed=188298
+JvmArgs=--dry-run
 PostExitCommand=
 PreLaunchCommand=
-QuitAfterGameStop=false
-RecordGameTime=true
-ShowConsole=false
-ShowConsoleOnError=true
-ShowGameTime=true
-UseDiscreteGpu=false
-UseNativeGLFW=false
-UseNativeOpenAL=false
-UseZink=false
 WrapperCommand=
 
 [UI]
-mods_Page\Columns=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\v\x80\a\0\0\0\x4\0\0\0\b\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\b\xf9\0\0\0\v\x1\x1\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\v\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x6\x44\0\0\0\x1\0\0\0\x1\0\0\0\xc1\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64\0\0\0\0)
+mods_Page\Columns=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x4\x1\0\0\0\0\0\0\0\0\0\0\0\v\x80\a\0\0\0\x4\0\0\0\t\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\n\0\0\0\x64\0\0\b\xf9\0\0\0\v\x1\x1\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\v\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x6\x44\0\0\0\x1\0\0\0\x1\0\0\0\xc1\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64\0\0\0\0)
 resourcepacks_Page\Columns=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\t\x1\0\0\0\x6\x1\x1\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x6\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\a\r\0\0\0\x1\0\0\0\x1\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64\0\0\0\0)
 shaderpacks_Page\Columns=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\x90\0\0\0\x4\x1\x1\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\x1\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64\0\0\0\0)
