--- a/minecraft/config/pickupnotifications.toml
+++ b/minecraft/config/pickupnotifications.toml
@@ -5,7 +5,7 @@ configVersion = 2
 modEnabled = true
 # Where to position the notifications. Can be one of
 # 'top_left', 'top_right', 'bottom_left', or 'bottom_right'.
-guiAlignment = "top_left"
+guiAlignment = "bottom_right"
 # The amount to offset the notifications from the edge
 # of the screen.
 guiOffset = [4, 4]
@@ -26,6 +26,6 @@ showUniqueInfo = true
 # Whether to render the background behind notifications.
 renderBackground = true
 # Opacity of the notification background color.
-backgroundOpacity = 0.5
+backgroundOpacity = 0.1
 # Whether to render text shadow in notifications.
 renderShadow = false
