--- a/minecraft/server.properties
+++ b/minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Sep 13 13:44:17 CDT 2025
+#Tue Sep 16 09:46:28 CDT 2025
 accepts-transfers=false
 allow-flight=true
 allow-nether=true
@@ -23,7 +23,7 @@ generator-settings={}
 hardcore=false
 hide-online-players=false
 initial-disabled-packs=
-initial-enabled-packs=vanilla
+initial-enabled-packs=vanilla,bundle
 level-name=saves/world
 level-seed=-3558865322019385911
 level-type=minecraft\:normal
